# carenav

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  railway.json  render.yaml  requirements.in  requirements.txt
.github/workflows/: ci.yml  eval.yml
docs/: 00-overview.md  01-architecture.md  02-tech-stack.md  03-orchestrator.md  04-agents.md  05-redaction.md  06-model-tiering.md  07-rag.md  08-data-model.md  09-eval.md  11-observability.md  12-scalability.md  13-build-plan.md  14-deployment-mapping.md  15-risks-non-goals.md  DEPLOY.md  README.md
eval/: __init__.py  config.py  members.py  report.py  run.py  sweep.py
eval/cujs/: __init__.py  cuj01_coverage.py  cuj02_deductible.py  cuj03_claim.py  (+8 more)
frontend/: Caddyfile  Dockerfile  index.html  package-lock.json  package.json  railway.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
scripts/: fetch_kb.sh  fetch_nppes.sh  generate_condition_index.py  run_synthea.sh
tests/: conftest.py  test_agents.py  test_api.py  test_benefits.py  test_chunking.py  test_condition_topics.py  test_drug_topics.py  test_embeddings.py  test_eval_assertions.py  test_eval_fixtures.py  test_eval_metrics.py  test_eval_pii_sweep.py  test_eval_run_smoke.py  test_eval_sweep.py  test_fireworks_finetune.py  test_gateway.py  test_groundedness.py  test_orchestrator.py  test_pii_metrics.py  test_plans.py  test_rag_agent.py  test_rag_retrieval.py  test_redaction_detect.py  test_redaction_tokenize.py  test_telemetry_events.py  test_turn_telemetry.py
(+161 files in other folders)
