[project]
name = "carenav"
version = "0.1.0"
description = "Multi-agent health-benefits & care navigator with PII redaction, tiered models, and eval-driven quality gates"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Runtime dependencies are pinned in requirements.txt (compiled from requirements.in).
# This list is the high-level source of truth; see requirements.in for the same set.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2.5",
    "mistralai>=2.0",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
    "httpx>=0.27",
    "tenacity>=8.2",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "python-dotenv>=1.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
    "pip-tools>=7.4",
]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["carenav*", "eval*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
